fix(#1550): broken links - wrong position - remove page

--- a/src/routes/design-tokens/overview/Overview.css
+++ b/src/routes/design-tokens/overview/Overview.css
@@ -1,3 +1,6 @@
 .overview-page goa-container {
   max-width: 72ch;
 }
+.overview-page code {
+  background-color: var(--goa-color-greyscale-100);
+}
